--- a/package.json
+++ b/package.json
@@ -5,12 +5,27 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p $PORT"
   },
   "dependencies": {
+    "3": "^2.1.0",
+    "-": "0.0.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@popperjs/core": "^2.9.1",
+    "bootstrap": "^4.6.0",
+    "firebase": "^8.3.0",
+    "jquery": "^1.9.1",
     "next": "10.0.8",
+    "popper.js": "^1.16.1",
     "react": "^17.0.1",
+    "react-card-flip": "^1.1.0",
     "react-dom": "17.0.1",
-    "react-router": "^5.2.0"
+    "react-popper": "^2.2.4",
+    "react-router": "^5.2.0",
+    "react-transition-group": "^4.4.1",
+    "reactstrap": "^8.9.0",
+    "sass": "^1.32.8"
   }
 }
