--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.1",
     "react-card-flip": "^1.1.0",
     "react-dom": "17.0.1",
+    "react-gtm-module": "^2.0.11",
     "react-popper": "^2.2.4",
     "react-router": "^5.2.0",
     "react-transition-group": "^4.4.1",
